// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Render with loaded account object 1`] = `
<div
  className="profile-cover"
>
  <div
    className="cover-image"
    style={
      Object {
        "backgroundImage": "url('https://images.ecency.com/p/Y2iXpRRkNSnseh3NuL6KUBitJTXrc5K3Kfvsq9JK3SkbY?format=match&mode=fit')",
      }
    }
  />
  <div
    className="follow-controls-holder"
  >
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginRight": "5px",
        }
      }
      type="button"
    >
      Follow
    </button>
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Mute
    </button>
    <span
      className="favorite-btn"
      onClick={[Function]}
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        title="Add to favorites"
        type="button"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </span>
  </div>
</div>
`;

exports[`(2) Render with mot loaded account object 1`] = `
<div
  className="profile-cover"
>
  <div
    className="cover-image"
    style={Object {}}
  />
  <div
    className="follow-controls-holder"
  >
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginRight": "5px",
        }
      }
      type="button"
    >
      Follow
    </button>
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Mute
    </button>
    <span
      className="favorite-btn"
      onClick={[Function]}
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        title="Add to favorites"
        type="button"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </span>
  </div>
</div>
`;

exports[`(3) No bg image - Day theme 1`] = `
<div
  className="profile-cover"
>
  <div
    className="cover-image"
    style={
      Object {
        "backgroundImage": "url('cover-fallback-day.png')",
      }
    }
  />
  <div
    className="follow-controls-holder"
  >
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginRight": "5px",
        }
      }
      type="button"
    >
      Follow
    </button>
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Mute
    </button>
    <span
      className="favorite-btn"
      onClick={[Function]}
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        title="Add to favorites"
        type="button"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </span>
  </div>
</div>
`;

exports[`(4) No bg image - Night theme 1`] = `
<div
  className="profile-cover"
>
  <div
    className="cover-image"
    style={
      Object {
        "backgroundImage": "url('cover-fallback-night.png')",
      }
    }
  />
  <div
    className="follow-controls-holder"
  >
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginRight": "5px",
        }
      }
      type="button"
    >
      Follow
    </button>
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Mute
    </button>
    <span
      className="favorite-btn"
      onClick={[Function]}
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        title="Add to favorites"
        type="button"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </span>
  </div>
</div>
`;
